Create StadiumEndpointResourceIf interface
